Adicao de validacoes na insercao de dados e correcao de bugs nas regras de negocio.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-NotBlank=é obrigatório
-NotNull=é obrigatório
+NotBlank=Campo obrigatório não preenchido
+NotNull=Campo obrigatório não preenchido
 Size=deve ter no mínimo {2} e no máximo {1} caracteres
 Email=deve ser um e-mail válido
